El Borde PeachPuff es menos ancho y se corrigen los NAV

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <header>        
         <img src="images/triptico.png" alt="">
         <!--navegacion-->
-        <nav>Contacto</nav>
-        <nav>El Triptico</nav>
-        <nav>Historia</nav>
+        <nav class="nav-links">
+            <a href="#">Historia</a>
+            <a href="#">El Tríptico</a>
+            <a href="#">Contacto</a>
+        </nav>
         
     </header>
 
