genere columnas para el index

--- a/index.html
+++ b/index.html
@@ -22,18 +22,28 @@
         
     </header>
     <main>
-        <div class="div-imagen">
-            <a href="granja.html">
-                <img class="imagen" src="images/granja.jpg" alt="Granja de la Infacia">
-            </a>
-            <a href="isla.html">
-                <img class="imagen" src="images/isla.jpg" alt="Isla de los Inventos">
-            </a>
-            <a href="jardin.hmtl">
-                <img class="imagen" src="images/jardin.jpg" alt="Jardin de los niños">
-            </a>
+        <div class="Bloque">    
+            <div class="div-imagen">
+                <div>
+                    <a href="granja.html">
+                        <img class="imagen" src="images/granja.jpg" alt="Granja de la Infacia">
+                    </a>
+                    <div class="text">La Granja de la Infacia</div>
+                </div>
+                <div>
+                        <a href="isla.html">
+                        <img class="imagen" src="images/isla.jpg" alt="Isla de los Inventos">
+                    </a>
+                    <div class="text">La Isla de los Inventos</div>
+                </div>
+                <div>
+                    <a href="jardin.html">
+                        <img class="imagen" src="images/jardin.jpg" alt="Jardin de los niños">
+                    </a>
+                    <div class="text">El Jardin de los Niños</div>
+                </div>
+            </div>
         </div>
-    
     </main>
 <!-- <main>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PNFU2q-JchU?si=Z2vnxca2Xh-wCuYt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> --esto se obtiene de compartir "insertar" y ese mismo codigo es esto
