agregando nuevas pestañas y detalles al contacto

--- a/Contacto.html
+++ b/Contacto.html
@@ -12,17 +12,31 @@
     <title>Contacto</title>
 </head>
 <body>
-    <header>
-        <a href="index.html">        
-            <img src="images/triptico.png" alt="">
-        </a>
-            <!--navegacion-->
-            <nav class="nav-links">
-                <a href="Historia.html">Historia</a>
-                <a href="Contacto.html">Contacto</a>
-            </nav>
-        
-    </header>
-
+    <div class="fondo">
+        <header>
+            <a href="index.html">        
+                <img src="images/triptico.png" alt="">
+            </a>
+                <!--navegacion-->
+                <nav class="nav-links">
+                    <a href="Historia.html">Historia</a>
+                    <a href="Reservas.html">Reservas</a>                    
+                    <a href="Contacto.html">Contacto</a>
+                </nav>
+            
+        </header>
+        <main>
+            <div class="formulario">
+                <p class="f-text">Nombre</p>
+                <input type="text">
+                <p class="f-text">email</p>
+                <input type="email" name="" id="">
+                <p class="f-text">telefono</p>
+                <input type="tel" name="" id="">
+                <p class="f-text">Consulta</p>
+                <input class="consulta" type="text" name="" id="">
+            </div>
+        </main>
+    </div>
 </body>
 </html>
