--- a/Reservas.html
+++ b/Reservas.html
@@ -9,11 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historia</title>
+    <title>Reservas</title>
 </head>
 <body>
     <div class="fondo">
-
         <header>
             <a href="index.html">        
                 <img src="images/triptico.png" alt="">
