--- a/jardin.html
+++ b/jardin.html
@@ -12,17 +12,19 @@
     <title>Jardin de los Niños</title>
 </head>
 <body>
-    <header>
-        <a href="index.html">        
-            <img src="images/triptico.png" alt="">
-        </a>
-            <!--navegacion-->
-            <nav class="nav-links">
-                <a href="Historia.html">Historia</a>
-                <a href="Contacto.html">Contacto</a>
-            </nav>
-        
-    </header>
-
+    <div class="fondo">
+        <header>
+            <a href="index.html">        
+                <img src="images/triptico.png" alt="">
+            </a>
+                <!--navegacion-->
+                <nav class="nav-links">
+                    <a href="Historia.html">Historia</a>
+                    <a href="Reservas.html">Reservas</a>
+                    <a href="Contacto.html">Contacto</a>
+                </nav>
+            
+        </header>
+    </div>
 </body>
 </html>
