acomodo el background

--- a/Contacto.html
+++ b/Contacto.html
@@ -30,13 +30,18 @@
                 <p class="f-text">Nombre</p>
                 <input type="text">
                 <p class="f-text">email</p>
-                <input type="email" name="" id="">
+                <input type="email" name="email" id="email" placeholder="example@example.com">
                 <p class="f-text">telefono</p>
                 <input type="tel" name="" id="">
                 <p class="f-text">Consulta</p>
                 <input class="consulta" type="text" name="" id="">
             </div>
         </main>
+        <footer>
+            <div>
+                <p>Copyright 2025</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
