agregue el div class grid al resto de las paginas, cambie el input por text area en contacto

--- a/Contacto.html
+++ b/Contacto.html
@@ -13,35 +13,37 @@
 </head>
 <body>
     <div class="fondo">
-        <header>
-            <a href="index.html">        
-                <img src="images/triptico.png" alt="">
-            </a>
-                <!--navegacion-->
-                <nav class="nav-links">
-                    <a href="Historia.html">Historia</a>
-                    <a href="Reservas.html">Reservas</a>                    
-                    <a href="Contacto.html">Contacto</a>
-                </nav>
-            
-        </header>
-        <main>
-            <div class="formulario">
-                <p class="f-text">Nombre</p>
-                <input type="text">
-                <p class="f-text">email</p>
-                <input type="email" name="email" id="email" placeholder="example@example.com">
-                <p class="f-text">telefono</p>
-                <input type="tel" name="" id="">
-                <p class="f-text">Consulta</p>
-                <input class="consulta" type="text" name="" id="">
-            </div>
-        </main>
-        <footer>
-            <div>
-                <p>Copyright 2025</p>
-            </div>
-        </footer>
+        <div class="grid">
+            <header>
+                <a href="index.html">        
+                    <img src="images/triptico.png" alt="">
+                </a>
+                    <!--navegacion-->
+                    <nav class="nav-links">
+                        <a href="Historia.html">Historia</a>
+                        <a href="Reservas.html">Reservas</a>                    
+                        <a href="Contacto.html">Contacto</a>
+                    </nav>
+                
+            </header>
+            <main>
+                <div class="formulario">
+                    <p class="f-text">Nombre</p>
+                    <input type="text">
+                    <p class="f-text">email</p>
+                    <input type="email" name="email" id="email" placeholder="example@example.com">
+                    <p class="f-text">telefono</p>
+                    <input type="tel" name="" id="">
+                    <p class="f-text">Consulta</p>
+                    <textarea class="consulta" type="text" name="" id=""></textarea>
+                </div>
+            </main>
+            <footer>
+                <div>
+                    <p>Copyright 2025</p>
+                </div>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
