--- a/Historia.html
+++ b/Historia.html
@@ -13,19 +13,19 @@
 </head>
 <body>
     <div class="fondo">
-
-        <header>
-            <a href="index.html">        
-                <img src="images/triptico.png" alt="">
-            </a>
-                <!--navegacion-->
-                <nav class="nav-links">
-                    <a href="Historia.html">Historia</a>
-                    <a href="Reservas.html">Reservas</a>
-                    <a href="Contacto.html">Contacto</a>
-                </nav>
-            
-        </header>
+        <div class="grid">
+            <header>
+                <a href="index.html">        
+                    <img src="images/triptico.png" alt="">
+                </a>
+                    <!--navegacion-->
+                    <nav class="nav-links">
+                        <a href="Historia.html">Historia</a>
+                        <a href="Reservas.html">Reservas</a>
+                        <a href="Contacto.html">Contacto</a>
+                    </nav>
+            </header>
+        </div>
     </div>
 </body>
 </html>
